2004-03-24 Scott Dattalo  <scott@dattalo.com>
	* src/processor.h, src/processor.cc: Added pma_context list
	* gui/Makefile.am: Recently added .h files are now in the Makefile
	* gui/gui_src.h, gui/gui_src_asm.cc: Multiple source browsers are
	now created based on the number of pma_contexts
	* gui/gui_object.h, gui/gui_src_asm.cc, gui/gui_breadboard.cc,
	gui/gui_main.cc, gui/gui_profile.cc, gui/gui_regwin.cc,
	gui/gui_scope.cc, gui/gui_src.cc, gui/gui_src_opcode.cc,
	gui/gui_stack.cc, gui/gui_stopwatch.cc, gui/gui_symbols.cc,
	gui/gui_trace.cc, gui/gui_watch.cc: 
	The GUI_Object 'name' member has been changed from a char * to a
	private string and is now no longer directly accessed by the derived
	classes. New methods set_name() and and name() control the access.
	
2004-03-24 Scott Dattalo  <scott@dattalo.com>
	* gui/gui_src_asm.cc, gui/gui_src.h: Added BreakPointList class to handle
	the 3 lists of breakpoints. Removed duplicate code too.

2004-03-23  Borut Razem  <borut.razem@siol.net>
	* src/modules.cc: gpsim on WIN32 doesn't support modules yet
	* gui/gui_breadboard.cc: GTK+ 2.x port

2004-03-22 Scott Dattalo  <scott@dattalo.com>
	* gui/gui_src.cc: Changed the event key processing from a case statement to
	a C++ map object.
	
2004-03-22 Scott Dattalo  <scott@dattalo.com>
	* gui/gui.h, gui/gui_breadboard.h, gui/gui_object.h, gui/gui_processor.h,
	* gui/gui_profile.h, gui/gui_register.h, gui/gui_regwin.h, gui/gui_scope.h,
	* gui/gui_src.h, gui/gui_stack.h, gui/gui_stopwatch.h, gui/gui_symbols.h,
	* gui/gui_trace.h, gui/gui_watch.h:
	Finished the gui split started on 03-16. 
	Added support for multiple source browsers (to be used with context debugging).

	
2004-03-22 Chris Emerson <gpsim@mail.nosreme.org>
	* modules/encoder.cc, modules/encoder.h: new files: added an encoder module
	* modules/Makefile.am: Added the encoder to the list of files.
	* gpsim/main.cc: gracefully revert to cli if gtk_init fails.
	* src/ioports.cc: remove PORTA debug message.
